--- a/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -153,9 +153,35 @@
     <Compile Include="06.Command\Solution\Results\StringResult.cs" />
     <Compile Include="06.Command\Solution\Results\SuccessResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Strategy\Employee.cs" />
-    <Compile Include="Strategy\ExportData.cs" />
-    <Compile Include="Strategy\Report.cs" />
+    <Compile Include="07.Strategy\Bar.cs" />
+    <Compile Include="07.Strategy\Customer.cs" />
+    <Compile Include="07.Strategy\Solution\StrategicCustomer.cs" />
+    <Compile Include="07.Strategy\Solution\HappyHourStrategy.cs" />
+    <Compile Include="07.Strategy\Solution\IBillingStrategy.cs" />
+    <Compile Include="07.Strategy\Solution\NormalStrategy.cs" />
+    <Compile Include="07.Strategy\Solution\StrategicBar.cs" />
+    <Compile Include="08.TemplateMethod\IFaxSender.cs" />
+    <Compile Include="08.TemplateMethod\IMailSender.cs" />
+    <Compile Include="08.TemplateMethod\ISystemHealthProvider.cs" />
+    <Compile Include="08.TemplateMethod\FaxingHealthChecker.cs" />
+    <Compile Include="08.TemplateMethod\SensibleHealthChecker.cs" />
+    <Compile Include="08.TemplateMethod\Solution\AbstractSystemHealthChecker.cs" />
+    <Compile Include="08.TemplateMethod\Solution\FaxingHealthChecker.cs" />
+    <Compile Include="08.TemplateMethod\Solution\SensibleHealthChecker.cs" />
+    <Compile Include="08.TemplateMethod\SystemHealthChecker.cs" />
+    <Compile Include="Visitor\Leaf.cs" />
+    <Compile Include="Visitor\Machine.cs" />
+    <Compile Include="Visitor\Node.cs" />
+    <Compile Include="Visitor\Solution\LeafVisitor.cs" />
+    <Compile Include="Visitor\Solution\LengthOfNamevisitor.cs" />
+    <Compile Include="Visitor\Solution\Machine.cs" />
+    <Compile Include="Visitor\Solution\SumOfNumericPropertiesVisitor.cs" />
+    <Compile Include="Visitor\Solution\User.cs" />
+    <Compile Include="Visitor\Solution\VisitableNode.cs" />
+    <Compile Include="Visitor\Solution\VisitableLeaf.cs" />
+    <Compile Include="Visitor\Solution\WeirdCalculator.cs" />
+    <Compile Include="Visitor\User.cs" />
+    <Compile Include="Visitor\WeirdCalculator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
